--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 # testing
 /coverage
 
+pickbook_bk/.env
+
 # production
 /build
 
@@ -23,7 +25,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-#server
-/server.js
-server*
